-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 1.8.6
-
None
-
lustre 1.8.3.0-6chaos
-
3
-
23,499
-
5093
A sysadmin was shutting down an MDS node cleanly in preparation for scheduled upgrades. During the umount of the MGS device, we hit the following assertion:
LustreError ... (lprocfs_status.c:1060:lprocfs_free_client_stats())
ASSERTION(atomic_read(&client_stat->nid_exp_ref_count) == 0) failed: count 1
And the stack trace was:
:obdclass:lprocfs_free_client_stats
:obdclass:lprocfs_free_per_client_stats
:mgs:lproc_mgs_cleanup
:mgs:mgs_cleanup
:obdclass:class_decref
:obdclass:class_export_destroy
:obdclass:obd_zombie_impexp_cull
:obdclass:obd_zombie_impexp_thread
We have seen this same assertion from OSTs as well. Some investigation was done in bug 23499, but there is not yet a solution.