LU-39 ASSERTION(atomic_read(&client_stat->nid_exp_ref_count) == 0)

In lprocfs_exp_setup(), we need release old stats in all cases.

Bugzilla: 23499
Change-Id: Ida40ffe82a12e213779e344da92f5e3e437f8c8b
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/350
Tested-by: Hudson
Reviewed-by: Oleg Drokin <green@whamcloud.com>