lustre/mgs/mgs_fs.c
@@ -59,14 +59,14 @@
 #include "mgs_internal.h"
 
 int mgs_export_stats_init(struct obd_device *obd, struct obd_export *exp,
-                          int reconnect, void *localdata)
+                          void *localdata)
 
 {
         lnet_nid_t *client_nid = localdata;
         int rc, newnid;
         ENTRY;
 
-        rc = lprocfs_exp_setup(exp, client_nid, reconnect, &newnid);
+        rc = lprocfs_exp_setup(exp, client_nid, &newnid);
         if (rc) {
                 /* Mask error for already created
                  * /proc entries */
